--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
                 <div class="container px-5">
                     <!-- Contact form-->
                     <div class="bg-light rounded-3 py-5 px-4 px-md-5 mb-5">
-                        <div class="map">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3951.516598377888!2d112.65062141419993!3d-7.9454456942769625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd629bc05c97bc7%3A0x2cc8f9e59123671c!2sSTMIK%20PPKIA%20Pradnya%20Paramita%20(STIMATA)!5e0!3m2!1sid!2sid!4v1666006871948!5m2!1sid!2sid" width="600" height="450" style="border:0; display: block; margin: auto;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+                        <div class="map-container">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3951.516598377888!2d112.65062141419993!3d-7.9454456942769625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd629bc05c97bc7%3A0x2cc8f9e59123671c!2sSTMIK%20PPKIA%20Pradnya%20Paramita%20(STIMATA)!5e0!3m2!1sid!2sid!4v1666006871948!5m2!1sid!2sid" width="100%" height="450" style="border:0; display: block; margin: auto;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
                         </div>
                     </div>
                     <!-- Contact cards-->
